--- a/app/views/header.html
+++ b/app/views/header.html
@@ -24,7 +24,7 @@
 <md-toolbar>
 <div class="md-toolbar-tools">
 	<md-button class="md-icon-button" aria-label="Settings" ng-disabled="true">
-	<md-icon md-svg-icon="img/icons/menu.svg"></md-icon>	
+	<i class="fa fa-bars fa-lg"></i>
 </md-button>
 <h2>
 	<span>Toolbar with Disabled/Enabled Icon Buttons</span>
