--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,18 +1,19 @@
 <md-dialog aria-label="Sign Up">
-<form name="signupForm">
-	<md-toolbar>
-	<div class="md-toolbar-tools">
-		<h2>Sign Up</h2>
-		<span flex></span>
-		<md-button class="md-icon-button" ng-click="cancel()">
-		<i class="fa fa-remove fa-lg" aria-label="Close dialog"></i>
-	</md-button>
-</div>
+<div layout="column" class="loginBox md-whiteframe-z1">
+	<form name="signupForm">
+		<md-toolbar>
+		<div class="md-toolbar-tools">
+			<h2>Sign Up</h2>
+			<span flex></span>
+			<md-button class="md-icon-button" ng-click="cancel()">
+			<i class="fa fa-remove fa-lg" aria-label="Close dialog"></i>
+		</md-button>
+	</div>
 </md-toolbar>
-<md-dialog-content style="width:400px;max-height:810px; ">
-<md-content layout-padding>
+<md-dialog-content  layout="column" class="md-padding">
+<md-content>
 
-<md-input-container class="md-block" flex>
+<md-input-container class="md-block" >
 <label>First name</label>
 <input name="firstName" md-maxlength="30" required ng-model="user.first_name">
 <div ng-messages="signupForm.firstName.$error">
@@ -21,7 +22,7 @@
 </div>
 </md-input-container>
 
-<md-input-container class="md-block" flex>
+<md-input-container class="md-block" >
 <label>Last Name</label>
 <input name="lastName" ng-model="user.last_name" required md-maxlength="30">
 <div ng-messages="signupForm.lastName.$error">
@@ -31,14 +32,37 @@
 </md-input-container>
 
 
-<md-input-container class="md-block" flex>
+
+<md-input-container class="md-block">
 <label>Email</label>
-<input name="email" ng-model="user.address" required>
-<div ng-messages="signupForm.lastName.$error">
+<input name="email" type="email" ng-model="user.address" required>
+<div ng-messages="signupForm.email.$error">
 	<div ng-message="required">This is required.</div>
 	<div ng-message="pattern">Enter valid email.</div>
 </div>
 </md-input-container>
+
+
+<md-input-container class="md-block">
+<label>Password</label>
+<input name="password"type="password" ng-model="user.password" ng-minlength="8" ng-maxlength="16" required />
+<div ng-messages="signupForm.password.$error">
+	<div ng-message="required">This is required.</div>
+	<div ng-message="minlength">Password should be grater than 8 characters long.</div>
+	<div ng-message="maxlength">Password should be less than 16 characters long.</div>
+</div>
+</md-input-container>
+
+<md-input-container class="md-block">
+<label>Password</label>
+<input name="passwordConfirmation" type="password" ng-model="user.password" ng-minlength="8" ng-maxlength="16" required />
+<div ng-messages="signupForm.passwordConfirmation.$error">
+	<div ng-message="required">This is required.</div>
+	<div ng-message="minlength">Password should be grater than 8 characters long.</div>
+	<div ng-message="maxlength">Password should be less than 16 characters long.</div>
+</div>
+</md-input-container>
+
 
 </md-content>
 </md-dialog-content>
@@ -53,4 +77,5 @@ Cancel
 </md-button>
 </md-dialog-actions>
 </form>
+</div>
 </md-dialog>
